# SFMLProject

./: .gitig  CMakeCache.txt  CMakeLists.txt  Makefile  SFMLApp  cmake_install.cmake  create_class.sh
include/: GameClass.hpp  Monster.hpp
src/: GameClass.cpp  Monster.cpp  main.cpp
